--- a/Project 01 - Image Replacer/index.html
+++ b/Project 01 - Image Replacer/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <h1>Hello World</h1>
-    
+    <form class="form-content">
+        <input type="text" class="form-input" placeholder="Image URL">
+        <button class="form-button">Submit Image</button>
+    </form>
 </body>
 </html>
