Function to replace any image on the current page - status: completed

--- a/Project 01 - Image Replacer/index.html
+++ b/Project 01 - Image Replacer/index.html
@@ -10,5 +10,7 @@
         <input type="text" class="form-input" placeholder="Image URL">
         <button class="form-button">Submit Image</button>
     </form>
+
+    <script src="./index.js"></script>
 </body>
 </html>
